--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar {
+    width: 1px;
+    height: 1px;
+}
+
+.scroll-hidden::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+}
