feat: sizes pages

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,3 +17,9 @@
     background-color: #fafafa;
     color: #fafafa;
 }
+
+@layer utilities {
+    .custom-no-after *::after {
+        @apply hidden;
+    }
+}
