style: admin settings,order seller orders mobile adaptive

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -34,3 +34,9 @@
         @apply hidden;
     }
 }
+
+@media (max-width: 576px) {
+    .ant-picker-panels {
+        flex-direction: column;
+    }
+}
